# ur5_moveit_simple

./: .travis.yml  CMakeLists.txt  README.md  package.xml  ur5_moveit_simple.rosinstall
.docker/: Dockerfile
.travis/: travis.sh  util.sh
config/: joint_names.yaml
launch/: gdb_settings.gdb  ur5_demo.launch  ur5_demo_run.launch  ur5_moveit_simple.launch  ur5_moveit_simple.rviz
src/: ur5_demo.cpp
urdf/: ur5_custom_tool.urdf  ur5_on_table.urdf.xacro
