<?xml version="1.0"?>
<package format="2">
  <name>ur5_moveit_simple</name>
  <version>0.0.1</version>
  <description>A demo using moveit_simple with the ur5</description>

  <maintainer email="mike@picknik.ai">Mike Lautman</maintainer>
  <author email="mike@picknik.ai">Mike Lautman</author>

  <license>BSD</license>

  <url type="website">https://github.com/PickNikRobotics/ur5_moveit_simple</url>
  <url type="bugtracker">https://github.com/PickNikRobotics/ur5_moveit_simple/issues</url>
  <url type="repository">https://github.com/PickNikRobotics/ur5_moveit_simple/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>rosparam_shortcuts</depend>
  <depend>eigen</depend>
  <depend>rviz_visual_tools</depend>
  <depend>moveit_simple</depend>
  <depend>ur5_moveit_config</depend>
  <depend>universal_robot</depend>

  <depend version_eq="3.9">clang-format</depend>

  <export>
  </export>
</package>
